--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             </div>
             <div class="navbar-center hidden lg:flex">
               <img src="./assets/logo.png" alt="">
-              <h1>Donate Bangladesh</h1>
+              <h1 class="text-black">Donate Bangladesh</h1>
             </div>
             <div class="navbar-end">
                 <img src="./assets/coin.png" alt="">
-                <h1>1000 BDT</h1>
+                <h1 class="text-black"> <span id="main-balance">10000</span>BDT</h1>
             </div>
           </div>
     </header>
@@ -59,16 +59,16 @@
                 class="rounded-lg w-full h-full" />
               </div> 
               <div class="ml-2 w-1/2">
-                <button class="flex btn bg-gray-300 text-black border-none mb-2 ">
+                <button  class="flex btn bg-gray-300 text-black border-none mb-2 hover:text-white">
                     <img src="./assets/coin.png" alt="">
-                    <h1>1000 BDT</h1>
+                    <h1 class=""><span id="noyakhali-balance-field">1000</span> BDT</h1>
                 </button>
                 <h1 class="text-xl font-bold mb-0 text-black">Donate for Flood at Noakhali, Bangladesh</h1>
                 <p class="py-4">
                     The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster.  Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
                 </p>
-                <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full bg-white text-black mb-4" />
-                <button class="btn btn-primary w-full bg-lime-500 text-black">Donate Now</button>
+                <input id="noyakhali-input-field" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full bg-white text-black mb-4" />
+                <button id="noyakhali-donate-btn" class="btn btn-primary w-full bg-lime-500 text-black">Donate Now</button>
               </div>
             </div>
           </div>
@@ -83,16 +83,16 @@
                 class="rounded-lg w-full h-full" />
               </div> 
               <div class="ml-2 w-1/2">
-                <button class="flex btn bg-gray-300 text-black border-none mb-2 ">
+                <button class="flex btn bg-gray-300 text-black border-none mb-2 hover:text-white">
                     <img src="./assets/coin.png" alt="">
-                    <h1>1000 BDT</h1>
+                    <h1><span id="feni-balance-field">1000</span>BDT</h1>
                 </button>
                 <h1 class="text-xl font-bold mb-0 text-black">Donate for Flood Relief in Feni,Bangladesh</h1>
                 <p class="py-4">
                     The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster.  Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
                 </p>
-                <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full bg-white text-black mb-4" />
-                <button class="btn btn-primary w-full bg-lime-500 text-black">Donate Now</button>
+                <input id="feni-input-field" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full bg-white text-black mb-4" />
+                <button id="feni-donate-btn" class="btn btn-primary w-full bg-lime-500 text-black">Donate Now</button>
               </div>
             </div>
           </div>
@@ -107,20 +107,23 @@
                 class="rounded-lg w-full h-full" />
               </div> 
               <div class="ml-2 w-1/2">
-                <button class="flex btn bg-gray-300 text-black border-none mb-2 ">
+                <button class="flex btn bg-gray-300 text-black border-none mb-2 hover:text-white">
                     <img src="./assets/coin.png" alt="">
-                    <h1>1000 BDT</h1>
+                    <h1><span id="student-balance-field">1000</span>BDT</h1>
                 </button>
                 <h1 class="text-xl font-bold mb-0 text-black">Aid for Injured in the Quota Movement</h1>
                 <p class="py-4">
                     The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster.  Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
                 </p>
-                <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full bg-white text-black mb-4" />
-                <button class="btn btn-primary w-full bg-lime-500 text-black">Donate Now</button>
+                <input id="student-input-field" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full bg-white text-black mb-4" />
+                <button id="studen-donate-btn" class="btn btn-primary w-full bg-lime-500 text-black">Donate Now</button>
               </div>
             </div>
           </div>
 
+          <!-- ! js files add -->
+           <script src="app.js"></script>
+           <script src="utilities.js"></script>
     </main>
 </body>
 </html>
