--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white">
-    <header class="px-24">
+    <header class="px-24 bg-zinc-100 sticky top-0 z-10">
         <!-- <div class="nav-bar">
             <div class="btn">
                 <button>button</button>
@@ -25,10 +25,9 @@
                 <h1>something2</h1>
             </div>
         </div> -->
-        <div class="navbar bg-white">
-
+        <div class="navbar pt-6">
             <div class="navbar-start">
-                <a><button class="btn bg-lime-500 text-black border-none w-auto h-2 py-1">Blog</button></a>
+                <a><button class="btn bg-lime-500 text-black border-none w-auto h-2 py-1 hover:bg-lime-500 text-black">Blog</button></a>
             </div>
             <div class="navbar-center hidden lg:flex">
               <img src="./assets/logo.png" alt="">
@@ -39,16 +38,17 @@
                 <h1 class="text-black"> <span id="main-balance">10000</span>BDT</h1>
             </div>
           </div>
+
+          <!--! button area html -->
+
+          <div class="button-area flex justify-center my-10 pb-6">
+            <button id="donation-btn" class="btn bg-lime-500 text-black border-none hover:bg-lime-500 text-black" type="button">Donation</button>
+            <button id="history-btn" class="btn bg-white text-black border-none ml-4 hover:bg-lime-500 text-black" >History</button>
+        </div>
     </header>
     <main>
-        <!--! button area html -->
-        <div class="button-area flex justify-center my-10">
-            <button class="btn bg-lime-500 border-none " type="button">Donation</button>
-            <button class="btn bg-lime-500 border-none ml-4 " >History</button>
-        </div>
-
         <!-- ! hero area html -->
-
+      <div id="camphain-area" class="camphain-area">
         <!-- ! Noyakhali area html -->
 
         <div class="hero bg-white py-8 px-24">
@@ -119,6 +119,12 @@
                 <button id="studen-donate-btn" class="btn btn-primary w-full bg-lime-500 text-black">Donate Now</button>
               </div>
             </div>
+          </div>
+
+        </div>
+
+          <div id="history-area" class="history-section pb-10 hidden">
+            <h1 ></h1>
           </div>
 
           <!-- ! js files add -->
