--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div> -->
         <div class="navbar pt-6">
             <div class="navbar-start">
-                <a><button class="btn bg-lime-500 text-black border-none w-auto h-2 py-1 hover:bg-lime-500 text-black">Blog</button></a>
+                <a href="faq.html"><button class="btn bg-lime-500 text-black border-none w-auto h-2 py-1 hover:bg-lime-500 text-black">Blog</button></a>
             </div>
             <div class="navbar-center hidden lg:flex">
               <img src="./assets/logo.png" alt="">
