--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-white">
+<body class="bg-white relative">
     <header class="px-24 bg-zinc-100 sticky top-0 z-10">
         <!-- <div class="nav-bar">
             <div class="btn">
@@ -33,7 +33,7 @@
               <img src="./assets/logo.png" alt="">
               <h1 class="text-black">Donate Bangladesh</h1>
             </div>
-            <div class="navbar-end">
+            <div class="navbar-end"> 
                 <img src="./assets/coin.png" alt="">
                 <h1 class="text-black"> <span id="main-balance">10000</span>BDT</h1>
             </div>
@@ -48,6 +48,7 @@
     </header>
     <main>
         <!-- ! hero area html -->
+
       <div id="camphain-area" class="camphain-area">
         <!-- ! Noyakhali area html -->
 
@@ -122,6 +123,29 @@
           </div>
 
         </div>
+
+        <!-- ! pop-up  card  section -->
+        <div id="pop-up" class="popup-card flex justify-center absolute top-1/4 left-1/3 hidden">
+        <div class="card bg-white w-96 shadow-xl">
+          <h2 class="text-center text-4xl text-black">congrate!</h2>
+          <figure class="px-10 pt-10">
+            <img
+              src="./assets/coin.png"
+              
+              class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            
+            <p>You have donated for Humankind</p>
+            <h2>successfuly</h2>
+            <div class="card-actions">
+              <button id="pop-up-btn" class="btn btn-primary">Close confarmation</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+        <!-- !history list section -->
 
           <div id="history-area" class="history-section pb-10 hidden">
             <h1 ></h1>
