--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white relative">
-    <header class="px-4 bg-zinc-100 static  z-10 hidden lg:px-24 sticky top-0 ">
+    <header class="px-4 bg-zinc-100 static  lg:z-10 lg:px-24 lg:sticky lg:top-0 ">
         <!-- <div class="nav-bar">
             <div class="btn">
                 <button>button</button>
@@ -125,8 +125,8 @@
         </div>
 
         <!-- ! pop-up  card  section -->
-        <div id="pop-up" class="popup-card flex justify-center absolute top-1/4 left-1/3 hidden">
-        <div class="card bg-white w-96 shadow-xl">
+        <div id="pop-up" class="popup-card flex justify-center absolute hidden top-1/5 left-1/4 lg:top-1/4 lg:left-1/3 ">
+        <div class="card bg-white w-50 shadow-xl lg:w-96">
           <h2 class="text-center text-4xl text-black">congrate!</h2>
           <figure class="px-10 pt-10">
             <img
